wik_dps_top04/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: tp
spec:
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
